# mcs5623

./: .gitattributes  .gitignore  README.md  flake.nix  pyproject.toml
reports/Pleune-M-PA04/: Pleune-M-PA04.tex  refrences.bib
workbooks/: Pleune-M-A01a.ipynb  Pleune-M-PA02.ipynb  Pleune-M-PA03.ipynb  Pleune-M-PA04-gradio.py  Pleune-M-PA04.ipynb  Pleune-M-PA06.ipynb  Wheat_Data.xlsx
