[tool.poetry]
name = "mcs5623"
version = "0.1.0"
description = "Mitchell Pleune's workspace for mcs5623"
authors = ["Mitchell Pleune <mitchpleune@gmail.com>"]
license = "UNLICENSED"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
imbalanced-learn = "^0.12.4"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.2.5"

[tool.poetry.group.dev.dependencies]


[tool.poetry.group.gradio.dependencies]
gradio = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
